--- a/results/deseq2.ipynb
+++ b/results/deseq2.ipynb
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "08e9a471",
    "metadata": {},
    "outputs": [
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "e7a80628",
    "metadata": {},
    "outputs": [
@@ -1358,6 +1358,55 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "3"
+      ],
+      "text/latex": [
+       "3"
+      ],
+      "text/markdown": [
+       "3"
+      ],
+      "text/plain": [
+       "[1] 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'Mki67'</li><li>'Pbk'</li><li>'Scoc'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'Mki67'\n",
+       "\\item 'Pbk'\n",
+       "\\item 'Scoc'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'Mki67'\n",
+       "2. 'Pbk'\n",
+       "3. 'Scoc'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"Mki67\" \"Pbk\"   \"Scoc\" "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1373,7 +1422,11 @@
     "\n",
     "# calculate Jaccard similarity for downregulated microglia DEG lists\n",
     "downM_jaccard <- jaccard(DEG_downM, age_downM$V1)\n",
-    "downM_jaccard"
+    "downM_jaccard\n",
+    "\n",
+    "# get number and names of overlapping age-up genes between two lists\n",
+    "length(intersect(DEG_upM, age_upM$V1))\n",
+    "intersect(DEG_upM, age_upM$V1)"
    ]
   },
   {
@@ -1719,7 +1772,7 @@
     "nrow(res9A_up)\n",
     "nrow(res12A_up)\n",
     "\n",
-    "# get number of downregulated astrocyte microglia DEGs at each time point\n",
+    "# get number of downregulated astrocyte DEGs at each time point\n",
     "nrow(res4A_down)\n",
     "nrow(res6A_down)\n",
     "nrow(res9A_down)\n",
@@ -1728,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "84c0a2d2",
    "metadata": {},
    "outputs": [
@@ -1823,6 +1876,42 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "123"
+      ],
+      "text/latex": [
+       "123"
+      ],
+      "text/markdown": [
+       "123"
+      ],
+      "text/plain": [
+       "[1] 123"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "143"
+      ],
+      "text/latex": [
+       "143"
+      ],
+      "text/markdown": [
+       "143"
+      ],
+      "text/plain": [
+       "[1] 143"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1838,12 +1927,18 @@
     "\n",
     "# calculate Jaccard similarity for downregulated astrocyte DEG lists\n",
     "downA_jaccard <- jaccard(DEG_downA, age_downA$V1)\n",
-    "downA_jaccard"
+    "downA_jaccard\n",
+    "\n",
+    "# get number of overlapping age-up genes between two lists\n",
+    "length(intersect(DEG_upA, age_upA$V1))\n",
+    "\n",
+    "# get number of overlapping age-down genes between two lists\n",
+    "length(intersect(DEG_downA, age_downA$V1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "57a4404c",
    "metadata": {},
    "outputs": [
@@ -2081,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "16df33ef",
    "metadata": {},
    "outputs": [
@@ -2157,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "ec8c0c6c",
    "metadata": {},
    "outputs": [
@@ -2196,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "id": "eb8119c2",
    "metadata": {},
    "outputs": [
@@ -2261,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "a3b56098",
    "metadata": {},
    "outputs": [
@@ -2300,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "id": "1555f2cc",
    "metadata": {},
    "outputs": [
