Fixed error in writing astrocyte file

--- a/results/impulseDE2.ipynb
+++ b/results/impulseDE2.ipynb
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "2c5acec1",
    "metadata": {},
    "outputs": [
@@ -1341,17 +1341,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Consumed time: 0.52 min.\n",
+      "Consumed time: 0.5 min.\n",
       "\n",
       "# Compute size factors\n",
       "\n",
       "# Fitting null and alternative model to the genes\n",
       "\n",
-      "Consumed time: 20.13 min.\n",
+      "Consumed time: 19.41 min.\n",
       "\n",
       "# Fitting sigmoid model to case condition\n",
       "\n",
-      "Consumed time: 3.6 min.\n",
+      "Consumed time: 3.54 min.\n",
       "\n",
       "# Differentially expression analysis based on model fits\n",
       "\n",
@@ -1359,7 +1359,7 @@
       "\n",
       "Finished running ImpulseDE2.\n",
       "\n",
-      "TOTAL consumed time: 24.42 min.\n",
+      "TOTAL consumed time: 23.72 min.\n",
       "\n"
      ]
     },
@@ -1418,12 +1418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "e9345a34",
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.table(micro_DEG, file=\"astro_trans_DEG.tmp\", quote=FALSE, row.names=FALSE, col.names=FALSE)\n",
+    "write.table(astro_DEG, file=\"astro_trans_DEG.tmp\", quote=FALSE, row.names=FALSE, col.names=FALSE)\n",
     "\n",
     "system(\"grep -v 'NA' astro_trans_DEG.tmp > astro_trans_DEG.txt\")\n",
     "system(\"rm astro_trans_DEG.tmp\")"
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "3e3b8933",
    "metadata": {},
    "outputs": [
@@ -1657,91 +1657,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "5ddef572",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 6 × 19</caption>\n",
-       "<thead>\n",
-       "\t<tr><th></th><th scope=col>Gene</th><th scope=col>p</th><th scope=col>padj</th><th scope=col>loglik_full</th><th scope=col>loglik_red</th><th scope=col>df_full</th><th scope=col>df_red</th><th scope=col>mean</th><th scope=col>converge_combined</th><th scope=col>converge_case</th><th scope=col>converge_control</th><th scope=col>converge_sigmoid</th><th scope=col>impulseTOsigmoid_p</th><th scope=col>impulseTOsigmoid_padj</th><th scope=col>sigmoidTOconst_p</th><th scope=col>sigmoidTOconst_padj</th><th scope=col>isTransient</th><th scope=col>isMonotonous</th><th scope=col>allZero</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;lgl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>Cst7</th><td>Cst7    </td><td>1.788292e-61</td><td>4.314970e-57</td><td>-204.97809</td><td>-354.1854</td><td>13</td><td>7</td><td>4198.73405</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0.02828382</td><td>0.2449606</td><td>2.287720e-52</td><td>5.520039e-48</td><td>FALSE</td><td>TRUE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>Baiap2l2</th><td>Baiap2l2</td><td>3.651235e-46</td><td>4.405033e-42</td><td> -82.57384</td><td>-195.9842</td><td>13</td><td>7</td><td>  52.83040</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0.68405269</td><td>1.0000000</td><td>1.066002e-30</td><td>5.144310e-27</td><td>FALSE</td><td>TRUE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>Hpse</th><td>Hpse    </td><td>1.842431e-41</td><td>1.481867e-37</td><td> -80.41927</td><td>-182.7979</td><td>13</td><td>7</td><td>  41.36722</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0.03548934</td><td>0.2876461</td><td>3.578881e-36</td><td>4.317740e-32</td><td>FALSE</td><td>TRUE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>Cd63</th><td>Cd63    </td><td>6.489383e-34</td><td>3.914558e-30</td><td>-276.65566</td><td>-361.2803</td><td>13</td><td>7</td><td>9731.74177</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1.00000000</td><td>1.0000000</td><td>2.298442e-33</td><td>1.848637e-29</td><td>FALSE</td><td>TRUE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>Lpl</th><td>Lpl     </td><td>4.248541e-25</td><td>2.050261e-21</td><td>-176.21692</td><td>-239.9836</td><td>13</td><td>7</td><td> 502.39717</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0.52462757</td><td>1.0000000</td><td>7.359973e-20</td><td>1.109930e-16</td><td>FALSE</td><td>TRUE</td><td>FALSE</td></tr>\n",
-       "\t<tr><th scope=row>Lyzl4</th><td>Lyzl4   </td><td>4.106831e-24</td><td>1.651562e-20</td><td>-161.95056</td><td>-223.3750</td><td>13</td><td>7</td><td> 288.77079</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0.12909819</td><td>0.6526315</td><td>4.742254e-21</td><td>8.173274e-18</td><td>FALSE</td><td>TRUE</td><td>FALSE</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 6 × 19\n",
-       "\\begin{tabular}{r|lllllllllllllllllll}\n",
-       "  & Gene & p & padj & loglik\\_full & loglik\\_red & df\\_full & df\\_red & mean & converge\\_combined & converge\\_case & converge\\_control & converge\\_sigmoid & impulseTOsigmoid\\_p & impulseTOsigmoid\\_padj & sigmoidTOconst\\_p & sigmoidTOconst\\_padj & isTransient & isMonotonous & allZero\\\\\n",
-       "  & <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <int> & <int> & <int> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <lgl> & <lgl> & <lgl>\\\\\n",
-       "\\hline\n",
-       "\tCst7 & Cst7     & 1.788292e-61 & 4.314970e-57 & -204.97809 & -354.1854 & 13 & 7 & 4198.73405 & 0 & 0 & 0 & 0 & 0.02828382 & 0.2449606 & 2.287720e-52 & 5.520039e-48 & FALSE & TRUE & FALSE\\\\\n",
-       "\tBaiap2l2 & Baiap2l2 & 3.651235e-46 & 4.405033e-42 &  -82.57384 & -195.9842 & 13 & 7 &   52.83040 & 0 & 0 & 0 & 0 & 0.68405269 & 1.0000000 & 1.066002e-30 & 5.144310e-27 & FALSE & TRUE & FALSE\\\\\n",
-       "\tHpse & Hpse     & 1.842431e-41 & 1.481867e-37 &  -80.41927 & -182.7979 & 13 & 7 &   41.36722 & 0 & 0 & 0 & 0 & 0.03548934 & 0.2876461 & 3.578881e-36 & 4.317740e-32 & FALSE & TRUE & FALSE\\\\\n",
-       "\tCd63 & Cd63     & 6.489383e-34 & 3.914558e-30 & -276.65566 & -361.2803 & 13 & 7 & 9731.74177 & 0 & 0 & 0 & 0 & 1.00000000 & 1.0000000 & 2.298442e-33 & 1.848637e-29 & FALSE & TRUE & FALSE\\\\\n",
-       "\tLpl & Lpl      & 4.248541e-25 & 2.050261e-21 & -176.21692 & -239.9836 & 13 & 7 &  502.39717 & 0 & 0 & 0 & 0 & 0.52462757 & 1.0000000 & 7.359973e-20 & 1.109930e-16 & FALSE & TRUE & FALSE\\\\\n",
-       "\tLyzl4 & Lyzl4    & 4.106831e-24 & 1.651562e-20 & -161.95056 & -223.3750 & 13 & 7 &  288.77079 & 0 & 0 & 0 & 0 & 0.12909819 & 0.6526315 & 4.742254e-21 & 8.173274e-18 & FALSE & TRUE & FALSE\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 6 × 19\n",
-       "\n",
-       "| <!--/--> | Gene &lt;chr&gt; | p &lt;dbl&gt; | padj &lt;dbl&gt; | loglik_full &lt;dbl&gt; | loglik_red &lt;dbl&gt; | df_full &lt;dbl&gt; | df_red &lt;dbl&gt; | mean &lt;dbl&gt; | converge_combined &lt;int&gt; | converge_case &lt;int&gt; | converge_control &lt;int&gt; | converge_sigmoid &lt;int&gt; | impulseTOsigmoid_p &lt;dbl&gt; | impulseTOsigmoid_padj &lt;dbl&gt; | sigmoidTOconst_p &lt;dbl&gt; | sigmoidTOconst_padj &lt;dbl&gt; | isTransient &lt;lgl&gt; | isMonotonous &lt;lgl&gt; | allZero &lt;lgl&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| Cst7 | Cst7     | 1.788292e-61 | 4.314970e-57 | -204.97809 | -354.1854 | 13 | 7 | 4198.73405 | 0 | 0 | 0 | 0 | 0.02828382 | 0.2449606 | 2.287720e-52 | 5.520039e-48 | FALSE | TRUE | FALSE |\n",
-       "| Baiap2l2 | Baiap2l2 | 3.651235e-46 | 4.405033e-42 |  -82.57384 | -195.9842 | 13 | 7 |   52.83040 | 0 | 0 | 0 | 0 | 0.68405269 | 1.0000000 | 1.066002e-30 | 5.144310e-27 | FALSE | TRUE | FALSE |\n",
-       "| Hpse | Hpse     | 1.842431e-41 | 1.481867e-37 |  -80.41927 | -182.7979 | 13 | 7 |   41.36722 | 0 | 0 | 0 | 0 | 0.03548934 | 0.2876461 | 3.578881e-36 | 4.317740e-32 | FALSE | TRUE | FALSE |\n",
-       "| Cd63 | Cd63     | 6.489383e-34 | 3.914558e-30 | -276.65566 | -361.2803 | 13 | 7 | 9731.74177 | 0 | 0 | 0 | 0 | 1.00000000 | 1.0000000 | 2.298442e-33 | 1.848637e-29 | FALSE | TRUE | FALSE |\n",
-       "| Lpl | Lpl      | 4.248541e-25 | 2.050261e-21 | -176.21692 | -239.9836 | 13 | 7 |  502.39717 | 0 | 0 | 0 | 0 | 0.52462757 | 1.0000000 | 7.359973e-20 | 1.109930e-16 | FALSE | TRUE | FALSE |\n",
-       "| Lyzl4 | Lyzl4    | 4.106831e-24 | 1.651562e-20 | -161.95056 | -223.3750 | 13 | 7 |  288.77079 | 0 | 0 | 0 | 0 | 0.12909819 | 0.6526315 | 4.742254e-21 | 8.173274e-18 | FALSE | TRUE | FALSE |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "         Gene     p            padj         loglik_full loglik_red df_full\n",
-       "Cst7     Cst7     1.788292e-61 4.314970e-57 -204.97809  -354.1854  13     \n",
-       "Baiap2l2 Baiap2l2 3.651235e-46 4.405033e-42  -82.57384  -195.9842  13     \n",
-       "Hpse     Hpse     1.842431e-41 1.481867e-37  -80.41927  -182.7979  13     \n",
-       "Cd63     Cd63     6.489383e-34 3.914558e-30 -276.65566  -361.2803  13     \n",
-       "Lpl      Lpl      4.248541e-25 2.050261e-21 -176.21692  -239.9836  13     \n",
-       "Lyzl4    Lyzl4    4.106831e-24 1.651562e-20 -161.95056  -223.3750  13     \n",
-       "         df_red mean       converge_combined converge_case converge_control\n",
-       "Cst7     7      4198.73405 0                 0             0               \n",
-       "Baiap2l2 7        52.83040 0                 0             0               \n",
-       "Hpse     7        41.36722 0                 0             0               \n",
-       "Cd63     7      9731.74177 0                 0             0               \n",
-       "Lpl      7       502.39717 0                 0             0               \n",
-       "Lyzl4    7       288.77079 0                 0             0               \n",
-       "         converge_sigmoid impulseTOsigmoid_p impulseTOsigmoid_padj\n",
-       "Cst7     0                0.02828382         0.2449606            \n",
-       "Baiap2l2 0                0.68405269         1.0000000            \n",
-       "Hpse     0                0.03548934         0.2876461            \n",
-       "Cd63     0                1.00000000         1.0000000            \n",
-       "Lpl      0                0.52462757         1.0000000            \n",
-       "Lyzl4    0                0.12909819         0.6526315            \n",
-       "         sigmoidTOconst_p sigmoidTOconst_padj isTransient isMonotonous allZero\n",
-       "Cst7     2.287720e-52     5.520039e-48        FALSE       TRUE         FALSE  \n",
-       "Baiap2l2 1.066002e-30     5.144310e-27        FALSE       TRUE         FALSE  \n",
-       "Hpse     3.578881e-36     4.317740e-32        FALSE       TRUE         FALSE  \n",
-       "Cd63     2.298442e-33     1.848637e-29        FALSE       TRUE         FALSE  \n",
-       "Lpl      7.359973e-20     1.109930e-16        FALSE       TRUE         FALSE  \n",
-       "Lyzl4    4.742254e-21     8.173274e-18        FALSE       TRUE         FALSE  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -1834,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "ac538f8b",
    "metadata": {},
    "outputs": [
@@ -1842,8 +1761,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"Setting boolSimplePlot=TRUE as no batch structure was found.\"\n",
-      "[1] \"Creating ./micro_mono_plots.pdf\"\n",
       "[1] \"Setting boolSimplePlot=TRUE as no batch structure was found.\"\n",
       "[1] \"Creating ./astro_mono_plots.pdf\"\n"
      ]
