Rerun monotonous astrocyte plots

--- a/results/impulseDE2.ipynb
+++ b/results/impulseDE2.ipynb
@@ -1744,8 +1744,8 @@
     }
    ],
    "source": [
-    "resM_mono <- resM_mono[order(resM_mono$padj),]\n",
-    "head(resM_mono)\n",
+    "# resM_mono <- resM_mono[order(resM_mono$padj),]\n",
+    "# head(resM_mono)\n",
     "\n",
     "resA_mono <- resA_mono[order(resA_mono$padj),]\n",
     "head(resA_mono)"
@@ -1769,9 +1769,9 @@
    "source": [
     "# plot expression trajectories of monotonous genes with 5 lowest q-values for each cell type\n",
     "# genes identified from above cell\n",
-    "monoM_plots <- plotGenes(vecGeneIDs = c(\"Cst7\", \"Baiap2l2\", \"Hpse\", \"Cd63\", \"Lpl\"), \n",
-    "    objectImpulseDE2 = micro_transient, boolCaseCtrl = TRUE, dirOut = \"./\",\n",
-    "    strFileName = \"micro_mono_plots.pdf\")\n",
+    "# monoM_plots <- plotGenes(vecGeneIDs = c(\"Cst7\", \"Baiap2l2\", \"Hpse\", \"Cd63\", \"Lpl\"), \n",
+    "    # objectImpulseDE2 = micro_transient, boolCaseCtrl = TRUE, dirOut = \"./\",\n",
+    "    # strFileName = \"micro_mono_plots.pdf\")\n",
     "\n",
     "monoA_plots <- plotGenes(vecGeneIDs = c(\"Cdkn1b\", \"Pvalb\", \"Rpl34-ps1\", \"Actb\", \"Fhl1\"),\n",
     "    objectImpulseDE2 = astro_transient, boolCaseCtrl = TRUE, dirOut = \"./\",\n",
